; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/msctf/extr_inputprocessor.c_cleanup.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/msctf/extr_inputprocessor.c_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_ipp = common dso_local global i64 0, align 8
@g_cm = common dso_local global i64 0, align 8
@g_tm = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cleanup() #0 {
  %1 = load i64, i64* @g_ipp, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i64, i64* @g_ipp, align 8
  %5 = call i32 @ITfInputProcessorProfiles_Release(i64 %4)
  br label %6

6:                                                ; preds = %3, %0
  %7 = load i64, i64* @g_cm, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %6
  %10 = load i64, i64* @g_cm, align 8
  %11 = call i32 @ITfCategoryMgr_Release(i64 %10)
  br label %12

12:                                               ; preds = %9, %6
  %13 = load i64, i64* @g_tm, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %12
  %16 = load i64, i64* @g_tm, align 8
  %17 = call i32 @ITfThreadMgr_Release(i64 %16)
  br label %18

18:                                               ; preds = %15, %12
  %19 = call i32 (...) @CoUninitialize()
  ret void
}

declare dso_local i32 @ITfInputProcessorProfiles_Release(i64) #1

declare dso_local i32 @ITfCategoryMgr_Release(i64) #1

declare dso_local i32 @ITfThreadMgr_Release(i64) #1

declare dso_local i32 @CoUninitialize(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
